# rddp

./: .pre-commit-config.yaml  README.md  pyproject.toml
examples/: ant.py  bug_trap.py  bug_trap_generation.py  cart_pole.py  constrained_pendulum.py  double_integrator.py  hdf5_test.py  mjx_pendulum.py  one_dimensional.py  pendulum.py  reach_avoid.py  rl_bug_trap.py  speed_test.py
rddp/: architectures.py  data_generation.py  data_loading.py  generation.py  gradient_descent.py  ocp.py  policy.py  training.py  utils.py
rddp/envs/: bug_trap.py  double_integrator.py  pendulum.py  reach_avoid.py
rddp/envs/models/pendulum/: pendulum.xml
rddp/systems/: base.py  double_integrator.py  mjx_base.py  mjx_pendulum.py  pendulum.py  single_integrator.py  unicycle.py
rddp/tasks/: base.py  bug_trap.py  double_integrator.py  mjx_pendulum_swingup.py  pendulum_swingup.py  reach_avoid.py
tests/: test_architectures.py  test_brax_speed.py  test_bug_trap.py  test_data_gen.py  test_data_loading.py  test_double_integrator.py  test_generation.py  test_gradient_descent.py  test_mjx_pendulum.py  test_ocp.py  test_pendulum.py  test_policy.py  test_reach_avoid.py  test_single_integrator.py  test_train.py  test_utils.py
