[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "rddp"
version = "0.0.1"
description = "Reward-Driven Diffusion Policy"
readme = "README.md"
license = {text="MIT"}
requires-python = ">=3.11.0"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python",
]
dependencies = [
    "jax[cuda12_local]==0.4.28",
    "jaxlib==0.4.28",
    "flax>=0.8.1",
    "pytest>=7.4.2",
    "ruff>=0.4.10",
    "pre-commit>=3.7.1",
]

[tool.ruff]
line-length = 80

[tool.pytest.ini_options]
testpaths = [
    "tests",
]
